<resources>
    <string name="app_name">CreatiVault</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_landing_page">LandingPage</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="characters">Characters</string>
    <string name="add_character">Add Character</string>
    <string name="add_setting">Add Setting</string>
    <string name="birthdate">Birthdate</string>
    <string name="complex">Complex</string>
    <string name="create_character">Create Character</string>
    <string name="feminine">Feminine</string>
    <string name="loud">Loud</string>
    <string name="masculine">Masculine</string>
    <string name="name">Name</string>
    <string name="quiet">Quiet</string>
    <string name="simple">Simple</string>
    <string name="calendar_type">Calendar Type</string>
    <string name="create_setting">Create Setting</string>
    <string name="custom">Custom</string>
    <string name="setting_name">Setting Name</string>
    <string name="standard">Standard</string>
    <string name="main_menu">Main Menu</string>
</resources>
